--- a/ProvaSiteware/ProvaSiteware.Infra.IoC/ProvaSiteware.Infra.IoC.csproj
+++ b/ProvaSiteware/ProvaSiteware.Infra.IoC/ProvaSiteware.Infra.IoC.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3267C211-17EE-4DB3-A882-CCFF775AE878}</ProjectGuid>
+    <ProjectGuid>{3D300A66-3906-4418-BECF-3A4327B22010}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProvaSiteware.Application</RootNamespace>
-    <AssemblyName>ProvaSiteware.Application</AssemblyName>
+    <RootNamespace>ProvaSiteware.Infra.IoC</RootNamespace>
+    <AssemblyName>ProvaSiteware.Infra.IoC</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,19 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppServiceBase.cs" />
-    <Compile Include="CarrinhoAppService.cs" />
-    <Compile Include="Interfaces\ICarrinhoAppService.cs" />
-    <Compile Include="Interfaces\IAppServiceBase.cs" />
-    <Compile Include="Interfaces\IProdutoAppService.cs" />
-    <Compile Include="ProdutoAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ProvaSiteware.Domain\ProvaSiteware.Domain.csproj">
-      <Project>{d9219f5c-06eb-41b8-964f-387353362d29}</Project>
-      <Name>ProvaSiteware.Domain</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
