--- a/ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/ProvaSiteware.Infra.CrossCutting.IoC.csproj
+++ b/ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/ProvaSiteware.Infra.CrossCutting.IoC.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +43,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resolver.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProvaSiteware.Application\ProvaSiteware.Application.csproj">
+      <Project>{3267c211-17ee-4db3-a882-ccff775ae878}</Project>
+      <Name>ProvaSiteware.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProvaSiteware.Domain\ProvaSiteware.Domain.csproj">
+      <Project>{d9219f5c-06eb-41b8-964f-387353362d29}</Project>
+      <Name>ProvaSiteware.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProvaSiteware.Infra.Data\ProvaSiteware.Infra.Data.csproj">
+      <Project>{96c740e2-f3e0-48ce-8dc0-51799b9db12e}</Project>
+      <Name>ProvaSiteware.Infra.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
